# eccs

./: .gitignore  404.html  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
datasets/evaluation/: .gitignore  dag_3b51d34e_edge_matrix.npy  dag_3b51d34e_graph.dot  dag_3b51d34e_noise_matrix.npy  dag_b90ba55a_dataset_a7918e64_Best single edge change_10_ate_trajectory.npy  dag_b90ba55a_dataset_a7918e64_Best single edge change_10_edit_distance_trajectory.npy  dag_b90ba55a_dataset_a7918e64_dag_3b51d34e_best_single_edge_change_10_abs_ate_diff_trajectory.npy  dag_b90ba55a_dataset_a7918e64_dag_3b51d34e_random_single_edge_change_10_abs_ate_diff_trajectory.npy  dag_b90ba55a_dataset_a7918e64_dag_3b51d34e_random_single_edge_change_10_ate_trajectory.npy  dag_b90ba55a_dataset_a7918e64_dag_3b51d34e_random_single_edge_change_10_edit_distance_trajectory.npy  dag_b90ba55a_dataset_a7918e64_parameters.json  dag_b90ba55a_dataset_a7918e64_pc_kci.dot  dag_b90ba55a_edge_matrix.npy  dag_b90ba55a_graph.dot  dag_b90ba55a_noise_matrix.npy  dag_b90ba55a_parameters.json  dag_b9ea0d1d_edge_matrix.npy  dag_b9ea0d1d_graph.dot  dag_b9ea0d1d_noise_matrix.npy
datasets/flights/: README.md
datasets/xyz_extended/: dataset_2024-02-14_21:07:53_incorrect.dot  dataset_2024-02-14_21:07:53_simple.dot  dataset_2024-02-20_20:42:28.json  dataset_2024-02-20_20:42:28_correct.dot  dataset_2024-02-20_20:42:28_incorrect.dot
docs/: gen_ref_pages.py  index.md
reference/SUMMARY/: index.html
reference/eccs/: index.html
reference/evaluation/: index.html
reference/generators/: index.html
search/: search_index.json
src/eccs/: ate.py  eccs.py  edge_state_matrix.py  edges.py  edits.py  graph_renderer.py  heuristic_search.py  mab.py  map_adj_set_to_graph.py  optimizer.py  printer.py
src/evaluation/: causal_discovery.py  config.yml  (+10 more)
tests/: test_break_paths.py  test_map_adj_set.py
(+24 files in other folders)
