[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eccs"
version = "0.1.0"
authors = [
  { name="Markos Markakis", email="markakis@mit.edu"},
  { name="Sylvia Ziyu Zhang", email="sylziyuz@mit.edu"},
]
description = "Code for the 'Exposing Critical Causal Structures' project."
readme = "README.md"
requires-python = ">=3.8, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "dihash",
  "dowhy>=0.11.1",
  "ipykernel>=6.29.2",
  "ipython>=8.18.0",
  "networkx>=3.2.1",
  "numpy>=1.26.1",
  "pandas>=2.2.0",
  "pydot>=2.0.0",
  "scikit-learn>=1.3.2",
  "tqdm>=4.66.2",
  "numpy",
]

[project.urls]
Code = "https://github.com/mmarkakis/eccs"
Docs = "https://mmarkakis.github.io/eccs/"


[project.optional-dependencies]
docs = [
  "markdown",
  "markdown_include",
  "mdx_include",
  "mkdocs-gen-files", 
  "mkdocs-jupyter", 
  "mkdocs-literate-nav", 
  "mkdocs-material", 
  "mkdocs-section-index",
  "mkdocstrings", 
  "mkdocstrings-python", 
  "Pygments", 
  "pymdown-extensions", 
]